    - KMS: fix EDID detailed timing frame rate
    - drm/radeon: add support for Richland APUs
    - drm/radeon/benchmark: make sure bo blit copy exists before using it
    - drm/i915: Don't clobber crtc->fb when queue_flip fails
  * [rt] Update to 3.2.42-rt62
  * debugfs: Document change of default mode
  * fbcon: fix locking harder (Closes: #704933)

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 27 Mar 2013 14:10:40 +0000

linux (3.2.41-2) unstable; urgency=low

  * [ia64] udeb: Remove efi-modules package; make kernel-image provide
    efi-modules (fixes FTBFS)
  * linux-headers: Fix file installation on architectures without
    Kbuild.platforms (Closes: #703800)
  * [x86] drm/i915: bounds check execbuffer relocation count (CVE-2013-0913)
  * [x86] drm: Enable DRM_GMA500 as module, replacing DRM_PSB (Closes: #703506)
    - Enable DRM_GMA600, DRM_GMA3600, DRM_MEDFIELD
  * [x86] KVM: x86: fix for buffer overflow in handling of MSR_KVM_SYSTEM_TIME
    (CVE-2013-1796)
  * [x86] KVM: x86: Convert MSR_KVM_SYSTEM_TIME to use gfn_to_hva_cache
    functions (CVE-2013-1797)
  * KVM: Fix bounds checking in ioapic indirect register reads (CVE-2013-1798)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 25 Mar 2013 15:17:44 +0000

linux (3.2.41-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.40
    - ext4: return ENOMEM if sb_getblk() fails
    - ext4: fix possible use-after-free with AIO
    - s390/kvm: Fix store status for ACRS/FPRS
    - staging: comedi: disallow COMEDI_DEVCONFIG on non-board minors
    - ext4: fix race in ext4_mb_add_n_trim()
    - UBIFS: fix double free of ubifs_orphan objects
    - hrtimer: Prevent hrtimer_enqueue_reprogram race
    - nfsd: Fix memleak
    - x86: Do not leak kernel page mapping locations
    - USB: usb-storage: unusual_devs update for Super TOP SATA bridge
    - posix-cpu-timers: Fix nanosleep task_struct leak
    - NFSv4.1: Don't decode skipped layoutgets