@@ -68,6 +68,8 @@ linux (3.2.43-1) UNRELEASED; urgency=low
   * [rt] Update to 3.2.42-rt62
   * debugfs: Document change of default mode
   * fbcon: fix locking harder (Closes: #704933)
+  * iwlwifi: Do not request firmware API version 6 for IWL6005/6205
+    (Closes: #705655)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 27 Mar 2013 14:10:40 +0000
 
